# agentic

./: .agentic-info  AGENT_QUICK_REFERENCE.md  AGENT_RULES.md  CONSOLIDATED_DOCS.md  DIRECTORY_STRUCTURE.md  HUMAN_GUIDE.md  MANUAL_SETUP.md  README.md  ag  agentic_info.json  check_environment.py  cleanup_manager.py  create_project.py  dependency_manager.py  error_handler.py  feedback_cli.py  feedback_system.py  rule_loader.py  rules.json  security.py  setup_agentic.sh  use_feedback_system.py  uv_manager.py  venv_manager.py
.githooks/: pre-commit
.github/workflows/: security-scan.yml
docs/: AGENT_QUICK_REFERENCE.md  AGENT_RULES.md  CI_SETUP.md  CONSOLIDATED_DOCS.md  DIRECTORY_STRUCTURE.md  HUMAN_GUIDE.md  LESSON_LEARNED.md  MANUAL_SETUP.md  PLAN.md  PLUGINS_GUIDE.md  PLUGIN_DEVELOPMENT.md  README.md
issues/: README.md  feedback_system_issues.md  framework_issues.md  improvement_suggestions.md
scripts/: check_environment.py  cleanup_manager.py  config.py  create_project.py  discover_agentic.py  rule_loader.py  security.py  setup.py  setup_agentic.sh  uv_manager.py
~/Agentic/projects/agentic-github/: .gitignore  README.md  pyproject.toml
~/Agentic/projects/agentic-github/docs/: USAGE.md
~/Agentic/projects/agentic-github/src/agentic_github/: __init__.py  cli.py  github_manager.py
~/Agentic/projects/agentic-github/tests/: test_github_manager.py
